--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,13 @@
+# Required
+MQTT_BROKER=localhost
+MQTT_PORT=1883
+
+# AI
 OPENAI_API_KEY=
+
+# Wakeword
 PORCUPINE_ACCESS_KEY=
+
+# TTS
+TTS_ENGINE=mac # mac, pyttsx3, elevenlabs
 ELEVENLABS_API_KEY=
