--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,9 @@ MQTT_BROKER=localhost
 MQTT_PORT=1883
 
 # AI
+AI_PROVIDER=local # openai, local
 OPENAI_API_KEY=
+MODEL_PATH=7B/Wizard-Vicuna-7B-Uncensored.ggmlv3.q4_1.bin # files located in the models folder
 
 # Wakeword
 PORCUPINE_ACCESS_KEY=
