--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 description = ""
 authors = ["Jan Lunge <janlunge1993@gmail.com>"]
 readme = "README.md"
-packages = [{include = "atlas_mqtt"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
@@ -21,6 +20,8 @@ pyttsx3 = "^2.90"
 pyobjc = "^9.2"
 mac-say = "^2020.12.3"
 setproctitle = "^1.3.2"
+fschat = "^0.2.18"
+llama-cpp-python = "^0.1.68"
 
 
 [build-system]
