--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ MQTT_PORT=1883
 
 # AI
 AI_PROVIDER=local # openai, local
+AI_MODE=agent # agent, simple
 OPENAI_API_KEY=
 MODEL_PATH=7B/Wizard-Vicuna-7B-Uncensored.ggmlv3.q4_1.bin # files located in the models folder
 
