--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ mac-say = "^2020.12.3"
 setproctitle = "^1.3.2"
 fschat = "^0.2.18"
 llama-cpp-python = "^0.1.68"
+langchain = "^0.0.226"
+duckduckgo-search = "^3.8.3"
 
 
 [build-system]
