--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,11 +20,11 @@ pyttsx3 = "^2.90"
 pyobjc = "^9.2"
 mac-say = "^2020.12.3"
 setproctitle = "^1.3.2"
-fschat = "^0.2.18"
+#fschat = "^0.2.20"
 llama-cpp-python = "^0.1.68"
 langchain = "^0.0.226"
 duckduckgo-search = "^3.8.3"
-
+hyperdb-python = "^0.1.4"
 
 [build-system]
 requires = ["poetry-core"]
