working windows version

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,10 @@ OPENAI_API_KEY=
 
 # Wakeword
 PORCUPINE_ACCESS_KEY=
+WAKEWORD=Atlas_en_windows_v2_2_0.ppn
+
 
 # TTS
-TTS_ENGINE=mac # mac, pyttsx3, elevenlabs
+TTS_ENGINE=mac # mac, tts3, elevenlabs
 ELEVENLABS_API_KEY=
+TTS_ENABLED=1
