--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ pyttsx3 = "^2.90"
 mac-say = "^2020.12.3"
 setproctitle = "^1.3.2"
 hyperdb-python = "^0.1.4"
+ludwig = "^0.8.4"
+transformers = "^4.33.3"
+
 
 [build-system]
 requires = ["poetry-core"]
