updated example env

--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,10 @@ MQTT_BROKER=localhost
 MQTT_PORT=1883
 
 # AI
-AI_PROVIDER=kobold # openai, local, kobold
-AI_API_URL=http://localhost:5001
+AI_PROVIDER=ollama # openai, local, kobold
 OPENAI_API_KEY=
+AI_MODEL=llama2-uncensored
+AI_API_URL=http://localhost:11434
 
 # Wakeword
 PORCUPINE_ACCESS_KEY=
